--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>PICKIN'</title>
+    <title>POPIT</title>
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
   </head>
-  <body style="position: relative">
+  <body>
     <img class="main-image" src="img/image1.png">
     <img class="main-image" src="img/image2.png">
     <img class="main-image" src="img/image3.png">
-    <a class="install-button install-button--top" href="https://apps.apple.com/kr/app/id1584901781" target="_blank"><img src="img/appleappstore.svg"></a>
-    <a class="install-button install-button--bottom" href="https://apps.apple.com/kr/app/id1584901781" target="_blank"><img src="img/appleappstore.svg"></a>
+    <img class="main-image" src="img/image4.png">
+    <div class="fab fixed">
+      <button class="button share-button"><img class="share" src="img/share.svg"></button>
+      <a class="button main-button" href="https://ur019slc8mj.typeform.com/to/CqgKWRse" target="_blank">출시알림 신청🔥</a>
+    </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 
@@ -26,13 +29,13 @@
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       var firebaseConfig = {
-        apiKey: "AIzaSyB6edEMPYPL37MJEu9ukzWW4yMAVvRXVFs",
-        authDomain: "phlox-pickin-qa.firebaseapp.com",
-        projectId: "phlox-pickin-qa",
-        storageBucket: "phlox-pickin-qa.appspot.com",
-        messagingSenderId: "554565540804",
-        appId: "1:554565540804:web:2624b562df5edc8a9aa291",
-        measurementId: "G-D6LLBD9H72"
+        apiKey: "AIzaSyC9dcVGFfnHtCkNrr_EL7YmIv9_KnHPIm4",
+        authDomain: "phlox-popit-test.firebaseapp.com",
+        projectId: "phlox-popit-test",
+        storageBucket: "phlox-popit-test.appspot.com",
+        messagingSenderId: "395168374381",
+        appId: "1:395168374381:web:226870b594caa9abe9e964",
+        measurementId: "G-F9JW4D8042"
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
