--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="main-image" src="img/image4.png">
     <div class="fab fixed">
       <button class="button share-button"><img class="share" src="img/share.svg"></button>
-      <a class="button main-button" href="https://ur019slc8mj.typeform.com/to/CqgKWRse" target="_blank">출시알림 신청🔥</a>
+      <a class="button main-button" href="https://ur019slc8mj.typeform.com/to/DKBM0Jlo" target="_blank">출시알림 신청🔥</a>
     </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
